<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >
    
    <com.lex.app.view.ContentViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    
    <ImageView android:layout_width="match_parent"
        android:layout_height="1dp"
        android:scaleType="fitXY"
        android:src="@drawable/divider"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_home"
            style="@style/RadioButtonStyle"
            android:drawableTop="@drawable/radio_button_home_selector"
            android:checked="true"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/radio_lib"
            style="@style/RadioButtonStyle"
            android:drawableTop="@drawable/radio_button_lib_selector"
            android:text="@string/lib" />

        <RadioButton
            android:id="@+id/radio_bbs"
            style="@style/RadioButtonStyle"
            android:drawableTop="@drawable/radio_button_bbs_selector"
            android:text="@string/bbs" />

        <RadioButton
            android:id="@+id/radio_store"
            style="@style/RadioButtonStyle"
            android:drawableTop="@drawable/radio_button_store_selector"
            android:text="@string/store" />

        <RadioButton
            android:id="@+id/radio_setting"
            style="@style/RadioButtonStyle"
            android:drawableTop="@drawable/radio_button_shopping_car_selector"
            android:text="@string/shoppingcar" />
    </RadioGroup>
    

</LinearLayout>
