<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_news"
            style="@style/LibRadioButtonStyle"
            android:text="@string/lib_news"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radio_borrow"
            style="@style/LibRadioButtonStyle"
            android:text="@string/lib_borrow" />

        <RadioButton
            android:id="@+id/radio_search"
            style="@style/LibRadioButtonStyle"
            android:text="@string/lib_search" />
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_lib"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ECEFF1" >
    </android.support.v4.view.ViewPager>

</LinearLayout>